# mandelbrot-explorer

./: Cargo.toml  Makefile
src/: lib.rs  main.rs  mandelbrot.rs
www/: index.html  index.js  package-lock.json  package.json
